--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,23 +9,28 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@fullcalendar/core": "^6.1.20",
+        "@fullcalendar/daygrid": "^6.1.20",
+        "@fullcalendar/interaction": "^6.1.20",
+        "@fullcalendar/react": "^6.1.20",
+        "@fullcalendar/timegrid": "^6.1.20",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-react": "^0.468.0",
         "next": "14.2.21",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "lucide-react": "^0.468.0",
-        "clsx": "^2.1.1",
-        "tailwind-merge": "^2.6.0",
-        "class-variance-authority": "^0.7.1"
+        "tailwind-merge": "^2.6.0"
     },
     "devDependencies": {
-        "typescript": "^5.3.0",
         "@types/node": "^20.0.0",
         "@types/react": "^18.2.0",
         "@types/react-dom": "^18.2.0",
         "autoprefixer": "^10.4.16",
+        "eslint": "^8.56.0",
+        "eslint-config-next": "14.2.21",
         "postcss": "^8.4.32",
         "tailwindcss": "^3.4.0",
-        "eslint": "^8.56.0",
-        "eslint-config-next": "14.2.21"
+        "typescript": "^5.3.0"
     }
 }
